Fixed issues with input formatting, more legible style

--- a/css/scrabble.css
+++ b/css/scrabble.css
@@ -1,5 +1,15 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color:#ffc86d;
+}
+
+
+h1 {
+    text-align: center;
+}
+
+table {
+    margin: auto;
 }
 
 label {
@@ -7,6 +17,51 @@ label {
     float: right;
 }
 
+input {
+    font-size: 1em;
+}
+
+div {
+    text-align: center;
+    margin: 0;
+    padding: 1em;
+    font-size: 1.25em;
+}
+
 td {
     padding: 0.5em;
+    text-align: left;
+}
+
+.content {
+    margin: auto;
+    margin-top: 2em;
+    width: 70%;
+    height: 100%;
+    background-color: #ffffff;
+    border: #bb0000 5px solid;
+    border-radius: 25px;
+}
+
+.warning {
+    color: red;
+}
+
+.display {
+    color: #009900;
+}
+
+.submit {
+	font-size: 1em;
+    display: block;
+    margin: auto;
+    background-color: #dddddd;
+    padding: 0.5em;
+    border-radius: 10px;
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+    margin: 0;
 }
